[gd_scene load_steps=3 format=3 uid="uid://cmaskeafftjip"]

[ext_resource type="Script" path="res://scenes/commons/items/inventory_item.gd" id="1_c7rpq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6pspw"]
radius = 38.2099

[node name="InventoryItem" type="Node2D" groups=["Items"]]
script = ExtResource("1_c7rpq")
item_effect = null

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_6pspw")

[node name="ItemSprite" type="Sprite2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
